# Reactor

./: .gitignore  CMakeLists.txt  README.md  clean.sh  open_client.sh  open_server.sh
README/: 内存管理.md  应用层IO零拷贝.md  性能测试.md
benchmark/Buffer/: Buffer_test.cpp
include/: types.h
include/base/: Buffer.h  ThreadPool.h  Timer.h
include/net/Connection/: Acceptor.h  Connection.h  InetAddress.h  Socket.h
include/net/Event/: Channel.h  Epoll.h  Eventloop.h
include/server/: EchoServer.h  TcpServer.h
new_src/base/: Buffer.cpp  Buffer.h  ThreadPool.h
new_src/net/Connection/: Connection.cpp
new_src/net/Event/: Epoll.cpp  Eventloop.cpp
new_src/server/: EchoServer.cpp  EchoServer.h  TcpServer.h
src/: client.cpp  main.cpp  types.h
src/base/: Buffer.cpp  Buffer.h  LockFreeQueue.h  Logger.h  ServiceProvider.cpp  ServiceProvider.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  Timestamp.cpp  Timestamp.h
src/base/Buffer/: AutoReleasePool.h  Buffer.h  BufferPool.h  GlobalPool.h  MonoRecyclePool.h  MsgView.h  RecvBuffer.h  SendBuffer.h  SendUnit.h  SmartMonoManager.h  SmartMonoPool.h  SyncPool.h
src/base/LockFreeQueue/: LockFreeQueue.h  NonOverlapObjectPool.cpp  NonOverlapObjectPool.h  NonOverlapPool.h  Region.h  VirtualRegionManager.h
src/client/: client.cpp
src/net/Connection/: Acceptor.cpp  Acceptor.h  Connection.cpp  Connection.h  InetAddress.cpp  Socket.cpp  Socket.h
src/net/Event/: Channel.cpp  Channel.h  Epoll.cpp  Epoll.h  Eventloop.cpp  Eventloop.h
src/server/: EchoServer.cpp  EchoServer.h  TcpServer.cpp  TcpServer.h  main.cpp  tcpepoll.cpp
src/server/tools/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  Connection.cpp  Connection.h  Epoll.cpp  Epoll.h  Eventloop.cpp  Eventloop.h  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  TcpServer.cpp  TcpServer.h  ThreadPoll.cpp  ThreadPoll.h  ThreadPool.cpp  ThreadPool.h  Timestamp.cpp
test/: analyze_flamegraph.sh  client.cpp  perf_test.sh  test.py  test.sh
test/PerformanceTest/: analyze_flamegraph.sh  performance_test.cpp  test.sh  test_apart.sh  win_client.cpp
test/clients/: basic_client.cpp  test_max_concurrent_client.cpp
test/unit_test/: test_buffer.cpp  test_buffer_pool.cpp
test/unit_test/Buffer/: test_auto_release_pool.cpp  test_buffer_pool.cpp  test_mono_recycle_pool.cpp  test_msg_view.cpp  test_recv_buffer.cpp  test_recv_send_buffer.cpp  test_send_buffer.cpp  test_smart_mono_pool.cpp  test_sync_pool.cpp
test/unit_test/LockFreeQueue/: test_virtual_region_manager.cpp
test/unit_test/ServiceProvider/: test_local_mono_recycle_pool.cpp
